deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schema-registry
  name: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - env:
        - name: SCHEMA_REGISTRY_HOST_NAME
          value: schema-registry
        - name: SCHEMA_REGISTRY_LISTENERS
          value: http://0.0.0.0:8081
        - name: SCHEMA_REGISTRY_MASTER_ELIGIBILITY
          value: "true"
        - name: SCHEMA_REGISTRY_DEBUG
          value: "true"
        - name: SCHEMA_REGISTRY_HEAP_OPTS
          value: -Xms512M -Xmx2G
        - name: SCHEMA_REGISTRY_KAFKASTORE_SASL_JAAS_CONFIG
          value: "org.apache.kafka.common.security.scram.ScramLoginModule required \ username="<Secret Manager Credentials>" \ password="<Secret Manager Credentials>";
        - name: SCHEMA_REGISTRY_KAFKASTORE_GROUP_ID
          value: cp-schema-registry
        - name: SCHEMA_REGISTRY_KAFKASTORE_SECURITY_PROTOCOL
          value: SASL_SSL
        - name: SCHEMA_REGISTRY_KAFKASTORE_SASL_MECHANISM
          value: SCRAM-SHA-512
        - name: SCHEMA_REGISTRY_KAFKASTORE_TOPIC
          value: _schemas
        - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
          value: SASL_SSL://<AWS MSK Broker URL>:9096
        name: schema-registry
        image: confluentinc/cp-schema-registry:6.0.1
        ports:
        - containerPort: 8081
          protocol: TCP
