svc.yml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  labels:
    app: schema-registry
spec:
  ports:
  - name: schema-registry
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: schema-registry
  type: NodePort
