ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: schema-registry
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: <Public Subnet 1>, <Public Subnet 2>
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: schema-registry
              servicePort: 8081
